--- a/views/index.jade
+++ b/views/index.jade
@@ -4,4 +4,5 @@ block content
 	h1 Hello Boulder!
 	a#weather(href='#') Get Weather
 
+	script(src='//code.jquery.com/jquery-2.1.1.min.js')
 	script(src='/js/index.js')
